# serio

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml
container/: Dockerfile
container/files/: entrypoint.sh
src/: args.rs  main.rs  prompt.rs  serial_io.rs  terminal.rs
