[package]
name = "serio"
version = "0.1.0"
description = "Serial port communication utility"
authors = ["fanuware <fanuware@gmail.com>"]
homepage = "https://github.com/fanuware/serio"
repository = "https://github.com/fanuware/serio"
readme = "README.md"
keywords = ["serial", "tty", "terminal", "cli"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
