[package]
name = "serio"
version = "0.1.0"
description = "Serial device communication utility"
authors = ["fanuware <fanuware@gmail.com>"]
homepage = "https://github.com/fanuware/serio"
repository = "https://github.com/fanuware/serio"
readme = "README.md"
keywords = ["serial", "tty", "terminal", "cli"]
license = "MIT"
edition = "2024"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build", "rustc"] }

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
